--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,1 +1,87 @@
-<p>about works!</p>
+<div class="main">
+    <div class="my-4"><h2 >About Me</h2></div>
+    <div class="row border-bottom">
+        <div class="col-sm-6">
+            <p>I'm Martin and developerfreelancerdesigner</p>
+            Hi! My name is Martin Peterson. I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process.
+        </div>
+        <div class="col-sm-6">
+            <p><span style="color: rgb(23, 100, 201);">Date of Birth : </span>13.03.1992</p> 
+            <p><span style="color: rgb(23, 100, 201);">Age : </span>29</p>
+            <p><span style="color: rgb(23, 100, 201);">Address : </span>Ataşehir, Istanbul, Turkey</p>
+            <p><span style="color: rgb(23, 100, 201);">Email : </span>donaldteghen@mail.com</p>
+            <p><span style="color: rgb(23, 100, 201);">Phone : </span>+90 536 480 2141</p>
+            <p><span style="color: rgb(23, 100, 201);">Website : </span>www.codewithdonny.com</p>
+        </div>
+    </div>
+    <div class="my-4"><h3 >What I do</h3></div>
+    <div class="row border-bottom">
+        <div class="col-sm-6 my-4">
+            <span><i class="fas fa-code-branch"></i>icon</span>
+            <div><h5>Creative design</h5></div>
+            <div>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</div>
+        </div>
+        <div class="col-sm-6 my-4">
+            <span><i class="fas fa-code-branch"></i>icon</span>
+            <div><h5>Creative design</h5></div>
+            <div>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</div>
+        </div>
+        <div class="col-sm-6 my-4">
+            <span><i class="fas fa-code-branch"></i>icon</span>
+            <div><h5>Creative design</h5></div>
+            <div>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</div>
+        </div>
+        <div class="col-sm-6 my-4">
+            <span><i class="fas fa-code-branch"></i>icon</span>
+            <div><h5>Creative design</h5></div>
+            <div>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</div>
+        </div>
+    </div>
+
+    <div class="my-4"><h3 >Clients</h3></div>
+    <div class="row border-bottom">
+        <div class="col-sm-3 my-4 text-center">
+            <img src="assets/1.png" alt="">
+        </div>
+        <div class="col-sm-3 my-4 text-center">
+            <img src="assets/2.png" alt="">
+        </div>
+        <div class="col-sm-3 my-4 text-center">
+            <img src="assets/3.png" alt="">
+        </div>
+        <div class="col-sm-3 my-4 text-center">
+            <img src="assets/4.png" alt="">
+        </div>
+    </div>
+
+    <div class="my-4"><h3>Interest</h3></div>
+    <div class="row border-bottom">
+        <div class="col-sm-6 my-2 py-4 text-center border-right" >
+            <span><i class="fas fa-laptop-code"></i></span>
+            <div><h5>Programming</h5></div>
+        </div>
+        <div class="col-sm-6 my-2 py-4 text-center" >
+            <span><i class="fas fa-book-reader"></i></span>
+            <div><h5>Reading</h5></div>
+        </div>
+        <div class="col-sm-6 my-2 py-4 text-center border-right" >
+            <span><i class="fas fa-route"></i></span>
+            <div><h5>Travel</h5></div>
+        </div>
+        <div class="col-sm-6 my-2 py-4 text-center" >
+            <span><i class="fas fa-camera-retro"></i></span>
+            <div><h5>Photography</h5></div>
+        </div>
+    </div>
+
+    <div class="my-4"><h3 >Certificates</h3></div>
+    <div class="row border-bottom">
+        <div class="col-sm-6 my-4 text-center">
+            <img src="assets/cs.jpg" width="100%" height="300px">
+        </div>
+        <div class="col-sm-6 my-4 text-center">
+            <img src="assets/2.png" alt="">
+        </div>
+        
+    </div>
+</div>
