--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,25 @@
 
-.p-d-flex.p-flex-column.p-shadow-1 div:hover{
-    opacity: 0.7;
-}
-.active-page{
-    opacity: 0.2;
-    border: none;
-}
-.p-d-flex.p-flex-column.p-shadow-1 div{
-    text-align: center;
-    background-color: wheat;
-    color:black;
-    font-size: 24px;
-   
+.dash_link{
+    width: 100px;
+    height: 50px; 
+    background-color: rgb(89, 174, 223); 
+    color: white;
+    margin-top: 4px;
+    margin-bottom: 4px;
 }
 
+.dash_link:hover{
+    background-color: rgb(7, 58, 87); 
+    color: white;
+    cursor:pointer;
+}
 
+.selected-Link{
+    background-color: rgb(7, 58, 87); 
+    color: white;
+}
 
-  
+.container.lower{
+    position: relative;
+    top: 20px;
+}
