--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-html {
+/*html {
     background-image: url("https://source.unsplash.com/weekly?water");
     background-color: #cccccc;
     height: 500px;
@@ -8,3 +8,4 @@ html {
     background-size: cover;
     position: relative;
   }
+*/
