Completed the resume, blog, contact, blog-details, works components all with mock data. Added some css animation on headings and icon objects

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,19 +4,34 @@
     <div class="col-sm-2">
       <div class="text-center">
         <div class="dash_link" routerLink="/about" routerLinkActive="selected-Link">
-          <i class="fas fa-user"></i><div>About</div>
+          <div class="py-2">
+            <span style="font-size: 30px;"><i class="fas fa-user"></i></span>
+            <div>About</div>
+          </div>
         </div>
         <div class="dash_link" routerLink="/resume" routerLinkActive="selected-Link">
-          <i class="fas fa-file"></i><div>Reusme</div>
+          <div class="py-2">
+            <span style="font-size: 30px;"><i class="fas fa-file"></i></span>
+            <div>Resume</div>
+          </div>
         </div>
         <div class="dash_link" routerLink="/works" routerLinkActive="selected-Link">
-          <i class="fas fa-code-branch"></i><div> Works</div>
+          <div class="py-2">
+            <span style="font-size: 30px;"><i class="fas fa-code-branch"></i></span>
+            <div class="">Works</div>
+          </div>
       </div>
         <div class="dash_link" routerLink="/contact" routerLinkActive="selected-Link">
-          <i class="fas fa-address-card"></i><div> Contact</div>
+          <div class="py-2">
+            <span style="font-size: 30px;"><i class="fas fa-address-card"></i></span>
+            <div class="">Contact</div>
+          </div>
         </div>
         <div class="dash_link" routerLink="/blog" routerLinkActive="selected-Link">
-          <i class="fas fa-blog"></i><div > Blog</div>
+          <div class="py-2">
+            <span style="font-size: 30px;"><i class="fas fa-blog"></i></span>
+            <div class="">Blog</div>
+          </div>
         </div>
       </div>
     </div>
