--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,41 +1,37 @@
 <div class="main">
-    <div class="my-4"><h2 >About Me</h2></div>
+    <div class="my-4"><h2 >About <span style="color: rgb(130, 88, 228)">Me</span> </h2></div>
     <div class="row border-bottom">
         <div class="col-sm-6">
-            <p>I'm Martin and developerfreelancerdesigner</p>
-            Hi! My name is Martin Peterson. I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process.
+            <p>I'm Donald and <span style="color: rgb(130, 88, 228)">I love web Development</span></p>
+            After graduating as an Electrical & Electronics engineer, I decided to pursue a career in web development and since then I've never looked back. I enjoy every step of the learning and development process. I have been developing for 3 years now, back and front between a few languages and frameworks, and then I finally settled down for Angular. Since then, I have managed to acquire some experience and developed a few projects. Actively learning and developing more projects.
         </div>
         <div class="col-sm-6">
-            <p><span style="color: rgb(23, 100, 201);">Date of Birth : </span>13.03.1992</p> 
-            <p><span style="color: rgb(23, 100, 201);">Age : </span>29</p>
-            <p><span style="color: rgb(23, 100, 201);">Address : </span>Ataşehir, Istanbul, Turkey</p>
-            <p><span style="color: rgb(23, 100, 201);">Email : </span>donaldteghen@mail.com</p>
-            <p><span style="color: rgb(23, 100, 201);">Phone : </span>+90 536 480 2141</p>
-            <p><span style="color: rgb(23, 100, 201);">Website : </span>www.codewithdonny.com</p>
+            <p><span style="color: rgb(130, 88, 228);">Date of Birth : </span>13.03.1992</p> 
+            <p><span style="color: rgb(130, 88, 228);">Age : </span>29</p>
+            <p><span style="color: rgb(130, 88, 228);">Address : </span>Ataşehir, Istanbul, Turkey</p>
+            <p><span style="color: rgb(130, 88, 228);">Email : </span>donaldteghen@mail.com</p>
+            <p><span style="color: rgb(130, 88, 228);">Phone : </span>+90 536 480 2141</p>
+            <p><span style="color: rgb(130, 88, 228);">Website : </span>www.codewithdonny.com</p>
         </div>
     </div>
     <div class="my-4"><h3 >What I do</h3></div>
     <div class="row border-bottom">
         <div class="col-sm-6 my-4">
-            <span><i class="fas fa-code-branch"></i>icon</span>
-            <div><h5>Creative design</h5></div>
-            <div>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</div>
+            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fab fa-angular"></i></span>
+            <div><h5 class="py-2">Angular</h5></div>
+            <div>It's been quite a study journey with angular. I like the design pattern implement by the framework, adding to the fact that its developed and maintained by google and a very rich set of third party libraries was convincing enough.</div>
         </div>
         <div class="col-sm-6 my-4">
-            <span><i class="fas fa-code-branch"></i>icon</span>
-            <div><h5>Creative design</h5></div>
-            <div>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</div>
+            <span style="font-size: 50px; color: rgb(130, 88, 228);" ><i class="fab fa-node"></i></span>
+            <div><h5 class="py-2">Node</h5></div>
+            <div>Along the way, i got tired of faking and mocking data, added to the fact that mock data is limited in flexibility, I decided to dive into nodejs. Ever since I have designed and built all my restful APIs with Node/express & Mongodb for the database, which I then fetch on client angular apps as needed...</div>
         </div>
         <div class="col-sm-6 my-4">
-            <span><i class="fas fa-code-branch"></i>icon</span>
-            <div><h5>Creative design</h5></div>
-            <div>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</div>
+            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-record-vinyl"></i></span>
+            <div><h5 class="py-2">Ionic</h5></div>
+            <div>Mobile first design is undeniably a fantastic idea and I have use mobile-first libraries(PrimeNg and Bootstraps). However, the look and feel always seemed lacking(NON-NATIVE FEEL) in many ways. So I decided to get my hands dirty one more time and obviously, I went for ionics. Fantistic angular playmate and to ice the cake, its one source code, cross-platform deployment. Who can say to that? NOT ME...</div>
         </div>
-        <div class="col-sm-6 my-4">
-            <span><i class="fas fa-code-branch"></i>icon</span>
-            <div><h5>Creative design</h5></div>
-            <div>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</div>
-        </div>
+        
     </div>
 
     <div class="my-4"><h3 >Clients</h3></div>
@@ -57,19 +53,19 @@
     <div class="my-4"><h3>Interest</h3></div>
     <div class="row border-bottom">
         <div class="col-sm-6 my-2 py-4 text-center border-right" >
-            <span><i class="fas fa-laptop-code"></i></span>
+            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-laptop-code"></i></span>
             <div><h5>Programming</h5></div>
         </div>
         <div class="col-sm-6 my-2 py-4 text-center" >
-            <span><i class="fas fa-book-reader"></i></span>
+            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-book-reader"></i></span>
             <div><h5>Reading</h5></div>
         </div>
         <div class="col-sm-6 my-2 py-4 text-center border-right" >
-            <span><i class="fas fa-route"></i></span>
+            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-route"></i></span>
             <div><h5>Travel</h5></div>
         </div>
         <div class="col-sm-6 my-2 py-4 text-center" >
-            <span><i class="fas fa-camera-retro"></i></span>
+            <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-camera-retro"></i></span>
             <div><h5>Photography</h5></div>
         </div>
     </div>
