--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -8,7 +8,7 @@
             <h5>Freelancer</h5>
         </div>
         <div class="col-sm-6">
-            Since 2016, I've developing my software knowledge and skill alongside my studies. My passion for software has grown over years and I researched and worked with many languages before finally, settling down with javascript.
+            Since 2016, I've been developing my software knowledge and skill alongside my studies. My passion for software has grown over years and I researched and worked with many languages before finally, settling down with javascript & Typescript.
         </div>
     </div>
     <div><hr></div>
@@ -20,7 +20,7 @@
             <h5>Digital & Electronics Lab Assistant</h5>
         </div>
         <div class="col-sm-6">
-            With over 2 years as Lab coordination's assistant, I have acquired the team work and management skills sortout by the software and related industry
+            With over 2 years as Lab coordination's assistant, I have acquired the team work and management skills sortout by the software and related industries.
         </div>
     </div>
     <div><hr></div>
@@ -32,7 +32,7 @@
             <h5>Electrical & Electronics Design Internship</h5>
         </div>
         <div class="col-sm-6">
-             Six months at Cameroon's biggest power plant, with the best engineers in the country, I learn under the supervision of the best. Engineering patterns, team work and task management.
+             Six months at Cameroon's biggest power plant, with the best engineers in the country, I learnt under the supervision of the best. Some of the skils I developed include; Engineering patterns, team work and task management.
         </div>
     </div>
 
@@ -43,37 +43,37 @@
     <div class="row my-4">
         <div class="col-sm-6">
            <h3>Programming Skills</h3>
-           <div class="my-4">
+           <div class="my-4 py-4">
                <h5>Typescript</h5>
                 <div class="progress">
                     <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
                 </div>
             </div>
-            <div class="my-4">
+            <div class="my-4 py-4">
                 <h5>Javascript</h5>
                  <div class="progress">
                      <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
                  </div>
              </div>
-             <div class="my-4">
+             <div class="my-4 py-4">
                 <h5>Java</h5>
                  <div class="progress">
                      <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
                  </div>
              </div>
-             <div class="my-4">
+             <div class="my-4 py-4">
                 <h5>Html</h5>
                  <div class="progress">
                      <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
                  </div>
              </div>
-             <div class="my-4">
+             <div class="my-4 py-4">
                 <h5>CSS</h5>
                  <div class="progress">
                      <div class="progress-bar bg-primary" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
                  </div>
              </div>
-             <div class="my-4">
+             <div class="my-4 py-4">
                 <h5>C#</h5>
                  <div class="progress">
                      <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
@@ -82,38 +82,39 @@
         </div>
         <div class="col-sm-6">
             <h3>FrameWorks Knowledge</h3>
-            <div class="my-4">
+            <div class="my-4 py-4">
                 <h5>Angular</h5>
                  <div class="progress">
                      <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
                  </div>
              </div>
-             <div class="my-4">
+             <div class="my-4 py-4">
                 <h5>Node</h5>
                  <div class="progress">
                      <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
                  </div>
              </div>
-             <div class="my-4">
+             
                 
-             <div class="my-4">
+             <div class="my-4 py-4">
                 <h5>SCSS</h5>
                  <div class="progress">
                      <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
                  </div>
              </div>
-             <h5>Ionics</h5>
-                 <div class="progress">
-                     <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
-                 </div>
+             <div class="my-4 py-4">
+                <h5>Ionics</h5>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                    </div>
              </div>
-             <div class="my-4">
+             <div class="my-4 py-4">
                 <h5>.NET FrameWork</h5>
                  <div class="progress">
                      <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
                  </div>
              </div>
-             <div class="my-4">
+             <div class="my-4 py-4">
                 <h5>ASP.NET FrameWork</h5>
                  <div class="progress">
                      <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
@@ -127,13 +128,13 @@
         
         <div class="col-sm-6">
             <h3>DataBase Knowledge</h3>
-            <div class="my-4">
+            <div class="my-4 py-4">
                 <h5>MS SQL</h5>
                  <div class="progress " style="height: 10px;">
                      <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
                  </div>
              </div>
-             <div class="my-4">
+             <div class="my-4 py-4">
                 <h5>MongoDB</h5>
                  <div class="progress" style="height: 10px;">
                      <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
@@ -141,13 +142,13 @@
              </div>
              
                 
-             <div class="my-4">
+             <div class="my-4 py-4">
                 <h5>Firebase</h5>
                  <div class="progress" style="height: 10px;">
                      <div class="progress-bar bg-primary" role="progressbar" style="width: 75%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">75%</div>
                  </div>
              </div>
-             <div class="my-4">
+             <div class="my-4 py-4">
                 <h5>Mysql</h5>
                  <div class="progress" style="height: 10px;">
                      <div class="progress-bar bg-success" role="progressbar" style="width: 80%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">80%</div>
@@ -156,19 +157,19 @@
         </div>
         <div class="col-sm-6">
             <h3>Language Skills</h3>
-            <div class="my-4">
+            <div class="my-4 py-4">
                 <h5>English</h5>
                  <div class="progress" style="height: 10px;">
                      <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
                  </div>
              </div>
-             <div class="my-4">
+             <div class="my-4 py-4">
                  <h5>French</h5>
                   <div class="progress" style="height: 10px;">
                       <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
                   </div>
               </div>
-              <div class="my-4">
+              <div class="my-4 py-4">
                  <h5>Turkish</h5>
                   <div class="progress" style="height: 10px;">
                       <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
