--- a/src/app/ui/blog-detail/blog-detail.component.css
+++ b/src/app/ui/blog-detail/blog-detail.component.css
@@ -5,10 +5,10 @@ h3{
     text-decoration-thickness: 10px;
 }
 
-p, h2, h3, h4, h5, div{
+ h2, h3, h4, h5, div,a{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-span {
+span, a {
     animation: color-change 3s infinite;
   }
   
