--- a/src/app/ui/blog/blog.component.html
+++ b/src/app/ui/blog/blog.component.html
@@ -1,1 +1,14 @@
-<p>blog works!</p>
+<div>
+    <div class="my-4"><h2 >Shared<span style="color: rgb(130, 88, 228)"> Articles</span> </h2></div>
+    <div class="row">
+        <div class="col-sm-6 my-2" *ngFor="let image of images">
+          <div class="card">
+            <img class="card-img-top" [src]="image" alt="Card image cap" width="100%" height="300px">
+            <div class="card-body">
+              <h6 class="card-subtitle mb-2 text-muted">Feb, 12 2020</h6>
+              <h5 class="card-title">I will hold the title</h5>
+              <a routerLink="/blog/{id}" class="more-text">Read More...<span class="arrow"><i class="fas fa-arrow-circle-right"></i></span></a>
+            </div>
+          </div>
+        </div>
+</div>
