--- a/src/app/ui/works/works.component.html
+++ b/src/app/ui/works/works.component.html
@@ -1,1 +1,23 @@
-<p>works works!</p>
+<div class="my-4">
+    <div class="my-4"><h2 >Creative<span class="animate"> Projects</span></h2></div>
+    <div class="d-flex my-2">
+        <span class="p-shadow-1 py-2 px-4 mr-2" (click)="selectAll()">All</span>
+        <span class="p-shadow-1 py-2 px-4 mr-2" (click)="selectAngular()">Angular</span>
+        <span class="p-shadow-1 py-2 px-4 mr-2" (click)="selectNode()">Node</span>
+        <span class="p-shadow-1 py-2 px-4 mr-2" (click)="selectIonic()">Ionic</span>
+        <span class="p-shadow-1 py-2 px-4 mr-2" (click)="selectNetFramework()">.Net Framework</span>
+    </div>
+    <div class="row">
+        <div class="col-md-4" *ngFor="let view of viewItems">
+            <div class="container m-2" (click)="goToPage('https://github.com/donteghen/tic-tac-toe-with-Angular-10')">
+                <img [src]="view" width="100%" height="400px" class="image rounded" >
+                <div class="middle">
+                    <div class="text">
+                        <strong style=" font-size:20">Angular Project One</strong>
+                        <p>Angular</p>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
+</div>
