Added a project interface and projects local mockdata fetch through project service. Did some light editing in the templates. Added some custom designed photshoped images to the works template

--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <div class="my-4"><h2 >Working <span class="animate">Progress</span></h2></div>
+    <div class="my-4 py-4"><h2 >Working <span class="animate">Progress</span></h2></div>
     <div class="row my-4">
         <div class="col-sm-3 ">
            <h4>2016 - Current</h4>
@@ -42,7 +42,7 @@
 
     <div class="row my-4">
         <div class="col-sm-6">
-           <h3>Programming Skills</h3>
+           <h3 class="py-4">Programming Skills</h3>
            <div class="my-4 py-4">
                <h5>Typescript</h5>
                 <div class="progress">
@@ -81,7 +81,7 @@
              </div>
         </div>
         <div class="col-sm-6">
-            <h3>FrameWorks Knowledge</h3>
+            <h3 class="py-4">FrameWorks Knowledge</h3>
             <div class="my-4 py-4">
                 <h5>Angular</h5>
                  <div class="progress">
@@ -127,7 +127,7 @@
     <div class="row my-4">
         
         <div class="col-sm-6">
-            <h3>DataBase Knowledge</h3>
+            <h3 class="py-4">DataBase Knowledge</h3>
             <div class="my-4 py-4">
                 <h5>MS SQL</h5>
                  <div class="progress " style="height: 10px;">
@@ -156,7 +156,7 @@
              </div>
         </div>
         <div class="col-sm-6">
-            <h3>Language Skills</h3>
+            <h3 class="py-4">Language Skills</h3>
             <div class="my-4 py-4">
                 <h5>English</h5>
                  <div class="progress" style="height: 10px;">
