--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <div class="my-4"><h2 >About <span style="color: rgb(130, 88, 228)">Me</span> </h2></div>
+    <div class="my-4 py-4"><h2 >About <span style="color: rgb(130, 88, 228)">Me</span> </h2></div>
     <div class="row border-bottom">
         <div class="col-sm-6">
             <p>I'm Donald and <span style="color: rgb(130, 88, 228)">I love web Development</span></p>
@@ -14,7 +14,7 @@
             <p><span style="color: rgb(130, 88, 228);">Website : </span>www.codewithdonny.com</p>
         </div>
     </div>
-    <div class="my-4"><h3 >What I do</h3></div>
+    <div class="my-4 py-4"><h3 >What I do</h3></div>
     <div class="row border-bottom">
         <div class="col-sm-6 my-4">
             <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fab fa-angular"></i></span>
@@ -33,24 +33,7 @@
         </div>
         
     </div>
-
-    <div class="my-4"><h3 >Clients</h3></div>
-    <div class="row border-bottom">
-        <div class="col-sm-3 my-4 text-center">
-            <img src="assets/1.png" alt="">
-        </div>
-        <div class="col-sm-3 my-4 text-center">
-            <img src="assets/2.png" alt="">
-        </div>
-        <div class="col-sm-3 my-4 text-center">
-            <img src="assets/3.png" alt="">
-        </div>
-        <div class="col-sm-3 my-4 text-center">
-            <img src="assets/4.png" alt="">
-        </div>
-    </div>
-
-    <div class="my-4"><h3>Interest</h3></div>
+    <div class="my-4 py-4"><h3>Interest</h3></div>
     <div class="row border-bottom">
         <div class="col-sm-6 my-2 py-4 text-center border-right" >
             <span style="font-size: 50px; color: rgb(130, 88, 228);"><i class="fas fa-laptop-code"></i></span>
@@ -70,13 +53,13 @@
         </div>
     </div>
 
-    <div class="my-4"><h3 >Certificates</h3></div>
+    <div class="my-4 py-4"><h3 >Certificates</h3></div>
     <div class="row border-bottom">
         <div class="col-sm-6 my-4 text-center">
             <img src="assets/cs.jpg" width="100%" height="300px">
         </div>
         <div class="col-sm-6 my-4 text-center">
-            <img src="assets/2.png" alt="">
+            <img src="assets/js.jpg" width="100%" height="300px">
         </div>
         
     </div>
