--- a/src/app/ui/works/works.component.css
+++ b/src/app/ui/works/works.component.css
@@ -11,32 +11,17 @@
     backface-visibility: hidden;
   }
   
-  .middle {
+  .more-text:hover .arrow{
+    opacity: 1;
+  }
+  .arrow{
     transition: .5s ease;
     opacity: 0;
-    position: absolute;
-    bottom:2%;
-    left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    text-align: center;
+    font-size: 40px;
+    float: right;
   }
-  
-  .container:hover .image {
-    opacity: 0.9;
-  }
-  
-  .container:hover .middle {
-    opacity: 1;
-    
-  }
-  
-  .text {
-    background-color: #FFFFFF;
-    color: black;
-    padding: 4px 4px;
-  }
-
   h3{
     text-decoration: underline;
     text-decoration-color: rgb(35, 21, 87); 
@@ -47,7 +32,7 @@
 p, h2, h3, h4, h5, div{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-span {
+span, strong {
     animation: color-change 3s infinite;
   }
   
