--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <div class="container lower">
   <div class="row">
-    <div class="col-sm-2">
+    <div class="col-2">
       <div class="text-center">
         <div class="dash_link" routerLink="/about" routerLinkActive="selected-Link">
           <div class="py-2">
@@ -34,6 +34,13 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="aligner">
+      <span style="font-size: 30px;" routerLink="/about" routerLinkActive="selected-Link"><i class="fas fa-user"></i></span>
+      <span style="font-size: 30px;" routerLink="/resume" routerLinkActive="selected-Link"><i class="fas fa-file"></i></span>
+      <span style="font-size: 30px;" routerLink="/works" routerLinkActive="selected-Link"><i class="fas fa-code-branch"></i></span>
+      <span style="font-size: 30px;" routerLink="/contact" routerLinkActive="selected-Link"><i class="fas fa-address-card"></i></span>
+      <span style="font-size: 30px;" routerLink="/blog" routerLinkActive="selected-Link"><i class="fas fa-blog"></i></span>
     </div>
     <div class="col-sm-10 bg-light">
       <p-scrollPanel [style]="{width: '100%', height: '600px'}">
