--- a/src/app/ui/contact/contact.component.html
+++ b/src/app/ui/contact/contact.component.html
@@ -17,20 +17,26 @@
 
     <div class="row my-4">
         <div class="col-sm-12">
-            <form [formGroup]="form" (ngSubmit)="sendEmail(form)">
+            <form [formGroup]="form" (ngSubmit)="sendEmail()" method="post"> 
+                <div *ngIf="submitted" class="text-center">
+                    <span style="font-size: 30px;">{{responseMessage}}</span>
+                  </div>
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" class="form-control" name="name" formControlName="name" required>
+                    <div *ngIf="name.touched && name.invalid" class="bg-warning">Incorrect name format</div>
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="email" name="email" class="form-control" formControlName="email" email required>
+                    <div *ngIf="email.touched && email.invalid" class="bg-warning">Incorrect email format</div>
                 </div>
                 <div class="form-group">
                     <label for="email">Message:</label>
                     <textarea name="message" class="form-control" cols="100" rows="10" formControlName="message" required></textarea>
+                    <div *ngIf="message.touched && message.invalid" class="bg-warning"> Please enter a correct message</div>
                 </div>
-                <div class="mt-2"><button type="submit" [disabled]="form.invalid" class="btn btn-primary">Send</button></div>
+                <div class="mt-2"><button type="submit" [disabled]="isLoading" class="btn btn-primary">Send</button></div>
             </form>
         </div>
     </div>
