Added a downloadable pdf to the download button in the resume template. Remove the jspdf dependency from the porject

--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -3,7 +3,12 @@
     <div class="row border-bottom">
         <div class="col-sm-6">
             <p>I'm Donald and <span style="color: rgb(130, 88, 228)">I love web Development</span></p>
-            After graduating as an Electrical & Electronics engineer, I decided to pursue a career in web development and since then I've never looked back. I enjoy every step of the learning and development process. I have been developing for 3 years now, back and front between a few languages and frameworks, and then I finally settled down for Angular. Since then, I have managed to acquire some experience and developed a few projects. Actively learning and developing more projects.
+            <div>
+                <p class="p-4">I am a highly competent web application software developer with 3 years’ experience developing a wide range of projects for both framework and non-framework oriented. I have proven expertise in building e-commerce and restaurant review apps. I understand the app project lifecycle in-depth and I enjoy all aspects of development from project planning to requirements gathering through to writing and testing code, creating documentation, and support. I am currently seeking long-term contract positions that will allow me to further improve and sharpen my software skills. I'm always up for new challenges and opportunities to learn more and do more.</p></div>
+            <div>
+                <p class="p-4"><span>Short Background</span></p>
+                <p>After graduating as an Electrical & Electronics engineer, I decided to pursue a career in web development and since then I've never looked back. I enjoy every step of the learning and development process. I have been developing for 3 years now, back and front between a few languages and frameworks, and then I finally settled down for Angular. Since then, I have managed to acquire some experience and developed a few projects. Actively learning and developing more projects.</p>
+            </div>
         </div>
         <div class="col-sm-6">
             <p><span style="color: rgb(130, 88, 228);">Date of Birth : </span>13.03.1992</p> 
@@ -11,7 +16,7 @@
             <p><span style="color: rgb(130, 88, 228);">Address : </span>Ataşehir, Istanbul, Turkey</p>
             <p><span style="color: rgb(130, 88, 228);">Email : </span>donaldteghen@mail.com</p>
             <p><span style="color: rgb(130, 88, 228);">Phone : </span>+90 536 480 2141</p>
-            <p><span style="color: rgb(130, 88, 228);">Website : </span>www.codewithdonny.com</p>
+            <p><span style="color: rgb(130, 88, 228);">Website : </span>https://donteghen.github.io/Portfolio/</p>
         </div>
     </div>
     <div class="my-4 py-4"><h3 >What I do</h3></div>
