--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -37,7 +37,8 @@
     </div>
 
     <div class="mt-6">
-        <button class="btn btn-primary">Download CV</button>
+        <button class="btn btn-outline-primary m-2"><a class="whitener" href="assets/DonaldTeghen_N.pdf" download="DonaldTeghen_N.pdf">Download Normal CV</a></button>
+        <button class="btn btn-outline-primary m-2"><a class="whitener" href="assets/DonalTeghen_F.pdf" download="DonalTeghen_F.pdf">Download Fancy CV</a></button>
     </div>
 
     <div class="row my-4">
