--- a/src/app/ui/resume/resume.component.css
+++ b/src/app/ui/resume/resume.component.css
@@ -17,3 +17,7 @@ span {
     50% { color: rgb(180, 13, 158); }
     100% { color: rgb(19, 226, 216); }
   }
+  .whitener:hover{
+    color: white !important;
+    text-decoration: none;
+  }
