--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,39 @@
 
 .dash_link{
-    width: 100px;
-    height: 100px; 
-    background-color: rgb(138, 103, 219); 
+    width: 100%;
+    height: 80px; 
+    background-color: #343A40;
     color: white;
-    margin-top: 4px;
-    margin-bottom: 4px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    
 }
-
-.dash_link:hover{
-    background-color: rgb(35, 21, 87); 
+div.col-2{
+    background-color: black;
+}
+div>a{
+    text-decoration: none;
+    color: white !important;
+}
+.name_on_image{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
     color: white;
+    padding-bottom: 6px;
+}
+.dash_link:hover{
+    
     cursor:pointer;
+    opacity: 0.8;
+}
+.dash_link:active{
+    border: none !important;
 }
 
 .selected-Link{
-    background-color: rgb(35, 21, 87); 
+    background-color: black;
     color: white;
+    border: none !important;
 }
 
 .container.lower{
@@ -27,6 +44,7 @@
 .icon-selected{
     color: rgb(35, 21, 87);
 }
+
 
 @media (max-width: 575.98px) { 
     .col-2{
