--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
 
-<div class="container lower">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-2">
+    <div class="col-2 py-2">
       <div class="text-center">
+        <div class="dark_link p-1" routerLink="/home" routerLinkActive="selected-Link">
+          <div class="rounded-circle bg-dark ">
+            <img class="rounded-circle py-2" src="https://source.unsplash.com/weekly?water" alt="Donald" width="90%" height="auto">
+          </div>
+          <h5 class="name_on_image">Donald Teghen</h5>
+        </div>
         <div class="dash_link" routerLink="/about" routerLinkActive="selected-Link">
           <div class="py-2">
             <span style="font-size: 30px;"><i class="fas fa-user"></i></span>
@@ -33,19 +39,32 @@
             <div class="">Blog</div>
           </div>
         </div>
+        <div class="text-center py-2">
+          <a href="" target="_blank"><span class="mx-2 p-2" style="font-size: 30px;" ><i class="fab fa-facebook-square"></i></span></a>
+          <a href="" target="_blank"><span class="mx-2 p-2" style="font-size: 30px;" ><i class="fab fa-github-square"></i></span></a>
+          <a href="" target="_blank"><span class="mx-2 p-2" style="font-size: 30px;" ><i class="fab fa-linkedin"></i></span></a>
+        </div>
       </div>
     </div>
-    <div class="aligner">
+    <!-- <div class="aligner">
       <span style="font-size: 30px;" routerLink="/about" routerLinkActive="selected-Link"><i class="fas fa-user"></i></span>
       <span style="font-size: 30px;" routerLink="/resume" routerLinkActive="selected-Link"><i class="fas fa-file"></i></span>
       <span style="font-size: 30px;" routerLink="/works" routerLinkActive="selected-Link"><i class="fas fa-code-branch"></i></span>
       <span style="font-size: 30px;" routerLink="/contact" routerLinkActive="selected-Link"><i class="fas fa-address-card"></i></span>
       <span style="font-size: 30px;" routerLink="/blog" routerLinkActive="selected-Link"><i class="fas fa-blog"></i></span>
-    </div>
-    <div class="col-sm-10 bg-light">
-      <p-scrollPanel [style]="{width: '100%', height: '600px'}">
+    </div> -->
+    <div class="col-sm-10 bg-dark py-2">
+      <div class="text-center aligner py-2">
+        <span style="font-size: 30px;" routerLink="/about" routerLinkActive="selected-Link"><i class="fas fa-user"></i></span>
+        <span style="font-size: 30px;" routerLink="/resume" routerLinkActive="selected-Link"><i class="fas fa-file"></i></span>
+        <span style="font-size: 30px;" routerLink="/works" routerLinkActive="selected-Link"><i class="fas fa-code-branch"></i></span>
+        <span style="font-size: 30px;" routerLink="/contact" routerLinkActive="selected-Link"><i class="fas fa-address-card"></i></span>
+        <span style="font-size: 30px;" routerLink="/blog" routerLinkActive="selected-Link"><i class="fas fa-blog"></i></span>
+      </div>
+      <!-- <p-scrollPanel [style]="{width: '100%', height: '800px'}">
           <router-outlet></router-outlet>
-      </p-scrollPanel>
+      </p-scrollPanel> -->
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
